chore: update `playgrounds`

--- a/playgrounds/html/index.html
+++ b/playgrounds/html/index.html
@@ -8,13 +8,15 @@
   <title>@pureadmin/table</title>
 
   <!-- jsdelivr cdn -->
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/element-plus/dist/index.css" />
+  <!-- <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/element-plus/dist/index.css" /> -->
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/@pureadmin/table/dist/style.css" />
   <script src="//cdn.jsdelivr.net/npm/vue/dist/vue.global.prod.js"></script>
   <script src="//cdn.jsdelivr.net/npm/element-plus/dist/index.full.min.js"></script>
-  <script src="//cdn.jsdelivr.net/npm/@pureadmin/table"></script>
+  <script src="//cdn.jsdelivr.net/npm/@pureadmin/table@latest"></script>
 
   <!-- unpkg cdn -->
-  <!-- <link rel="stylesheet" href="//unpkg.com/element-plus/dist/index.css" />
+  <!-- <link rel="stylesheet" href="//unpkg.com/element-plus/dist/index.css" /> -->
+  <!-- <link rel="stylesheet" href="//unpkg.com/@pureadmin/table/dist/style.css" />
   <script src="//unpkg.com/vue/dist/vue.global.prod.js"></script>
   <script src="//unpkg.com/element-plus/dist/index.full.min.js"></script>
   <script src="//unpkg.com/@pureadmin/table"></script> -->
